deploy/svc-yealink-provision.yaml
apiVersion: v1
kind: Service
metadata:
  name: yealink-provision
  namespace: yealink-provision
spec:
  selector:
    app: yealink-provision
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
